# interflop-stdlib

./: CMakeLists.txt  Makefile  Makefile.am  automake-expand  ax_interflop_stdlib.m4  check_glibc_symbols.sh  configure.ac  interflop-config.in  interflop.h  interflop_stdlib.c  interflop_stdlib.h  interflop_vinterface.h
common/: float_struct.h  float_utils.h  options.h
fma/: Makefile.am  fmaqApprox.c  fmaqApprox.h  fmaqApproxM.c  fmaqApproxM.h  interflop_fma.cxx
hashmap/: Makefile.am  vfc_hashmap.c  vfc_hashmap.h
iostream/: Makefile.am  logger.c  logger.h
m4/: ax_interflop_stdlib.m4  ax_intrinsic_fma.m4  ax_lto.m4
prng/: Makefile.am  vr_rand.h  xoshiro.cxx
rng/: Makefile.am  vfc_rng.c
